<resources>
    <string name="app_name">Wurple</string>
    <string name="sauropod">🦕</string>
    <string name="sign_in_welcome">Welcome to %1$s!</string>
    <string name="sign_in_description">All you need to sign-in is your email address 😉</string>
    <string name="sign_in_email_placeholder">Email</string>
    <string name="sign_in_email_leading_icon">Clear email</string>
    <string name="sign_in_agreements">I agree to the Privacy Policy</string>
    <string name="sign_in_email_verification_verify_email">Verify your email</string>
    <string name="sign_in_email_verification_sent">We have just sent sign-in link to %1$s</string>
    <string name="sign_in_email_verification_resend_timer">Resend in %1$ds</string>
    <string name="sign_in_email_verification_resend">Resend sign-in link</string>
    <string name="sign_in_email_verification_change_email">Change email</string>
    <string name="main_you">You</string>
    <string name="main_previews">Previews</string>
    <string name="main_more">More</string>
    <string name="you_company">at %1$s</string>
    <string name="fill_out_your_profile">Fill out your profile</string>
    <string name="edit_profile_title">Edit profile</string>
    <string name="edit_profile_image_title">Edit your image</string>
    <string name="edit_profile_image_choose">Choose image</string>
    <string name="edit_profile_image_delete">Delete image</string>
    <string name="edit_profile_image_delete_are_you_sure">Are you sure you want to delete your image?</string>
    <string name="edit_profile_image_read_external_storage_permissions_rationals_message">
        In order to add an image we need access to your photos, media and files on your device
    </string>
    <string name="edit_profile_image_read_external_storage_permissions_settings_message">
        In order to add an image we need access to your photos, media and files on your device. Go to settings to enable the permissions
    </string>
    <string name="edit_profile_full_name">Full name</string>
    <string name="edit_profile_name_title">Edit your name</string>
    <string name="edit_profile_name_first_name_hint">First name</string>
    <string name="edit_profile_name_first_name_stub">Anonymous</string>
    <string name="edit_profile_name_last_name_hint">Last name</string>
    <string name="edit_profile_name_last_name_stub">Person</string>
    <string name="edit_profile_dob_title">Edit your date of birth</string>
    <string name="edit_profile_dob">Date of birth</string>
    <string name="edit_profile_dob_stub">Enter your date of birth</string>
    <string name="edit_profile_location">Location</string>
    <string name="edit_profile_location_title">Edit your location</string>
    <string name="edit_profile_location_stub">Set your work location</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_email_title">Edit your email</string>
    <string name="edit_profile_email_verify_email">This operation is sensitive and requires recent authentication. We will send you sign-in link to verify your account</string>
    <string name="edit_profile_username">Username</string>
    <string name="edit_profile_username_title">Edit your username</string>
    <string name="edit_profile_username_hint">Username</string>
    <string name="edit_profile_username_helper">Minimum length is %1$d characters. You can use a–z, 0–9 and underscores</string>
    <string name="edit_profile_username_stub">Create a username</string>
    <string name="edit_profile_bio">Bio</string>
    <string name="edit_profile_bio_title">Edit your bio</string>
    <string name="edit_profile_bio_stub">Add a few words about yourself</string>
    <string name="skills_title">Skills</string>
    <string name="skills_personal">Personal</string>
    <string name="skills_professional">Professional</string>
    <string name="skills_empty_state_title">No skills found</string>
    <string name="skills_add_skill">Skill</string>
    <string name="skills_add_description">Enter the skills you have (separated by commas), for example, Emotional Intelligence as a Personal skill or MS Word as a Professional one</string>
    <string name="skills_add_skill_type">Skill type</string>
    <string name="skills_add_title">Add skill</string>
    <string name="skills_add_edit_title">Edit skill</string>
    <string name="skills_add_skill_already_added_error">\"%1$s\" skill has already been added</string>
    <string name="skills_delete">Delete skill</string>
    <string name="skills_delete_are_you_sure">Are you sure you want to delete your skill?</string>
    <string name="skills_personal_error_can_not_create_more_than">You can not create more than %1$d personal skills items</string>
    <string name="skills_professional_error_can_not_create_more_than">You can not create more than %1$d professional skills items</string>
    <string name="experience_title">Experience</string>
    <string name="experience_empty_state_title">No experience found</string>
    <string name="experience_date">%1$s - %2$s</string>
    <string name="experience_date_range">%1$s - %2$s (%3$s)</string>
    <string name="experience_date_range_months_and_years">%1$s %2$s</string>
    <plurals name="experience_date_months">
        <item quantity="one">%1$d mo</item>
        <item quantity="other">%1$d mos</item>
    </plurals>
    <plurals name="experience_date_years">
        <item quantity="one">%1$d yr</item>
        <item quantity="other">%1$d yrs</item>
    </plurals>
    <string name="experience_add_title">Add experience</string>
    <string name="experience_add_edit_title">Edit experience</string>
    <string name="experience_add_position_hint">Position</string>
    <string name="experience_add_company_name_hint">Company name</string>
    <string name="experience_add_date_from_hint">From</string>
    <string name="experience_add_date_to_hint">To</string>
    <string name="experience_add_is_current_hint">I currently work here</string>
    <string name="experience_delete">Delete experience</string>
    <string name="experience_delete_are_you_sure">Are you sure you want to delete your experience?</string>
    <string name="experience_error_can_not_create_more_than">You can not create more than %1$d experience items</string>
    <string name="education_title">Education</string>
    <string name="education_empty_state_title">No education found</string>
    <string name="education_add_title">Add education</string>
    <string name="education_add_edit_title">Edit education</string>
    <string name="education_add_degree_hint">Degree</string>
    <string name="education_add_institution_hint">Institution</string>
    <string name="education_add_date_graduation_hint">Graduation</string>
    <string name="education_delete">Delete education</string>
    <string name="education_delete_are_you_sure">Are you sure you want to delete your education?</string>
    <string name="education_error_can_not_create_more_than">You can not create more than %1$d education items</string>
    <string name="languages_title">Languages</string>
    <string name="languages_empty_state_title">No languages found</string>
    <string name="languages_add_title">Add language</string>
    <string name="languages_add_edit_title">Edit language</string>
    <string name="languages_add_language">Language</string>
    <string name="languages_add_languages_level">Level</string>
    <string name="languages_add_languages_already_added_error">Language with this level has already been added</string>
    <string name="languages_delete">Delete language</string>
    <string name="languages_delete_are_you_sure">Are you sure you want to delete your language?</string>
    <string name="languages_error_can_not_create_more_than">You can not create more than %1$d language items</string>
    <string name="languages_level_0">No Proficiency</string>
    <string name="languages_level_1">Elementary Proficiency</string>
    <string name="languages_level_2">Limited Working Proficiency</string>
    <string name="languages_level_3">Professional Working Proficiency</string>
    <string name="languages_level_4">Full Professional Proficiency</string>
    <string name="languages_level_5">Native / Bilingual Proficiency</string>
    <string name="languages_language_english">English</string>
    <string name="languages_language_chinese">Chinese</string>
    <string name="languages_language_spanish">Spanish</string>
    <string name="languages_language_arabic">Arabic</string>
    <string name="languages_language_japanese">Japanese</string>
    <string name="languages_language_hindustani">Hindustani</string>
    <string name="languages_language_french">French</string>
    <string name="languages_language_german">German</string>
    <string name="languages_language_russian">Russian</string>
    <string name="languages_language_portuguese">Portuguese</string>
    <string name="languages_language_italian">Italian</string>
    <string name="languages_language_ukrainian">Ukrainian</string>
    <string name="location_empty_state_title">No location found</string>
    <string name="location_query_hint">Search</string>
    <string name="location_incorrect">Incorrect location</string>
    <string name="account_title">Account</string>
    <string name="account_edit_email">Edit email</string>
    <string name="account_sign_out">Sign out</string>
    <string name="account_sign_out_are_you_sure">Are you sure you want to sign out?</string>
    <string name="account_delete_account">Delete account</string>
    <string name="delete_account_first_check">Permanently delete all data</string>
    <string name="delete_account_verify">Verify account deletion</string>
    <string name="delete_account_are_you_sure">Are you sure you want to delete your account?</string>
    <string name="support_email">Email</string>
    <string name="support_email_subject">%1$s support</string>
    <string name="support_telegram">Telegram</string>
    <string name="in_app_purchases_title">In-app purchases</string>
    <string name="invite_friend_title">Invite a friend</string>
    <string name="invite_friend_desc">Scan QR code, share app via popular social networks or just copy an invitation link to invite a friend 🤠</string>
    <string name="settings_title">Settings</string>
    <string name="about_app_title">About app</string>
    <string name="about_app_description">The professional achievements storage</string>
    <string name="about_onboarding">Onboarding</string>
    <string name="about_app_rate">Rate app</string>
    <string name="about_app_privacy_policy">Privacy Policy</string>
    <string name="about_app_t_and_c">Terms and Conditions</string>
    <string name="about_app_made_in_ukraine">Made in Ukraine</string>
    <string name="onboarding_title">Onboarding</string>
    <string name="previews_add_title">Add Preview</string>
    <string name="previews_add_title_hint">Title</string>
    <string name="previews_add_title_helper">Visible only to you. Write clearly for whom it is intended, for example, \"For John Doe\" or \"For Company\"</string>
    <string name="previews_add_exp_title">Choose lifetime</string>
    <string name="previews_add_exp_1">1 day</string>
    <string name="previews_add_exp_2">3 days</string>
    <string name="previews_add_exp_3">1 week</string>
    <string name="previews_add_exp_4">2 weeks</string>
    <string name="previews_add_exp_5">1 month</string>
    <string name="previews_add_exp_6">3 months</string>
    <string name="previews_add_option_title">Choose visibility option</string>
    <string name="previews_add_option_visible">Visible</string>
    <string name="previews_add_option_anonymous">Anonymous</string>
    <string name="preview_empty_state_removed">Preview is not found. Seems like it was removed</string>
    <string name="common_continue">Continue</string>
    <string name="common_add">Add</string>
    <string name="common_view">View</string>
</resources>