<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.flow.previews.add.PreviewsAddFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/recyclerView">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:subtitleCentered="true"
                app:titleCentered="true"
                tools:title="@string/previews_add_title" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/mainProgressIndicator"
                style="@style/LinearProgressIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:visibility="gone"
                tools:visibility="visible" />

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:visibility="visible">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/match_constraint"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/size_medium"
            app:layout_constraintBottom_toTopOf="@id/actionView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="@dimen/size_medium">

                <!--PreviewItem.Header-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/titleTextInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/previews_add_title_hint"
                    app:endIconMode="clear_text"
                    app:helperText="@string/previews_add_title_helper"
                    app:helperTextEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/titleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/expTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/size_medium"
                    android:text="@string/previews_add_exp_title"
                    android:textAppearance="?textAppearanceTitleMedium" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/expChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_medium"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/exp1Chip"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/previews_add_exp_1"
                        app:ensureMinTouchTargetSize="false" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/exp2Chip"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/previews_add_exp_2"
                        app:ensureMinTouchTargetSize="false" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/exp3Chip"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/previews_add_exp_3"
                        app:ensureMinTouchTargetSize="false" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/exp4Chip"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/previews_add_exp_4"
                        app:ensureMinTouchTargetSize="false" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/exp5Chip"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/previews_add_exp_5"
                        app:ensureMinTouchTargetSize="false" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/exp6Chip"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/previews_add_exp_6"
                        app:ensureMinTouchTargetSize="false" />

                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:id="@+id/optionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/size_medium"
                    android:text="@string/previews_add_option_title"
                    android:textAppearance="?textAppearanceTitleMedium" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/optionChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_medium"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/visibleOptionChip"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/previews_add_option_visible"
                        app:ensureMinTouchTargetSize="false" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/anonymousOptionChip"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/previews_add_option_anonymous"
                        app:ensureMinTouchTargetSize="false" />

                </com.google.android.material.chip.ChipGroup>

                <com.wurple.presentation.view.PreviewView
                    android:id="@+id/previewView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_xx_large" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <View
            android:id="@+id/actionView"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/dividerView"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/size_min"
            android:background="?colorOutline"
            app:layout_constraintEnd_toEndOf="@id/actionView"
            app:layout_constraintStart_toStartOf="@id/actionView"
            app:layout_constraintTop_toTopOf="@id/actionView" />

        <Button
            android:id="@+id/addButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_medium"
            android:text="@string/common_add"
            app:layout_constraintBottom_toBottomOf="@id/actionView"
            app:layout_constraintEnd_toEndOf="@id/actionView"
            app:layout_constraintTop_toTopOf="@id/actionView" />

        <Button
            android:id="@+id/viewButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_medium"
            android:text="@string/common_view"
            app:layout_constraintBottom_toBottomOf="@id/actionView"
            app:layout_constraintEnd_toStartOf="@id/addButton"
            app:layout_constraintTop_toTopOf="@id/actionView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/emptyStateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_x_large"
        android:layout_marginTop="@dimen/size_x_large"
        android:gravity="center_horizontal"
        android:textAppearance="?textAppearanceSubtitle1"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:text="@string/preview_empty_state_removed"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
