<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.flow.profile.edit.email.createeditprofileemailrequest.CreateEditProfileEmailRequestFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.Material3.Toolbar.Surface"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/edit_profile_email_title"
        app:titleCentered="true" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/mainProgressIndicator"
        style="@style/LinearProgressIndicator"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_medium"
        android:layout_marginTop="@dimen/size_small"
        android:text="@string/edit_profile_email_verify_email"
        android:textAppearance="?textAppearanceBodyMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Button
        android:id="@+id/actionButton"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_medium"
        android:layout_marginTop="@dimen/size_medium"
        android:text="@string/common_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>